cache-invalidator/src/main/java/kcm/test/cache/invalidator/config/CacheInvalidatorConfig.java
package kcm.test.cache.invalidator.config;

import org.springframework.context.annotation.ComponentScan;
import org.springframework.context.annotation.Configuration;

@Configuration
@ComponentScan("kcm.test.cache.invalidator")
public class CacheInvalidatorConfig {

}
